--- a/public/style.scss
+++ b/public/style.scss
@@ -15,7 +15,7 @@ $dark-red: rgba(255, 0, 0, 0.8);
 %outline-style {
     outline-style: solid;
     outline-width: 2px;
-    outline-color: $lighter_purple;
+    outline-color: $light_purple;
 }
 
 %centered-form-layout {
@@ -198,6 +198,7 @@ body {
 
 .group-section {
     height: 75vh;
+    width: 100%;
     overflow-y: auto;
     overflow-x: hidden;
     &::-webkit-scrollbar {
@@ -225,7 +226,7 @@ body {
     font-size: 1.2em;
     &:hover {
         cursor: pointer;
-        background: $lighter_purple;
+        background: $light_purple;
         color: $white_greyish_color;
         .group-section__select-button__icon {
             visibility: visible;
@@ -239,12 +240,17 @@ body {
 .group-section__select-button__icon {
     visibility: hidden;
     float: right;
-    margin-right: 10%;
+    margin: 1% 10% 0 0;
     font-size: 0.9em;
     &:hover {
         color: $dark-red;
         transform: scale(1.1);
     }
+}
+
+.highlight {
+    background: $light_purple;
+    color: $white_greyish_color;
 }
 
 .input-field__input {
@@ -321,9 +327,9 @@ body {
 .topic-content__add-button {
     appearance: none;
     display: inline-block;
-    position: absolute;
+    position: fixed;
     right: 5%;
-    bottom: 3%;
+    bottom: 4%;
     width: 3.5vw;
     height: 3.5vw;
     padding: 5px 0;
@@ -332,6 +338,7 @@ body {
     background: $light_purple;
     color: $white_greyish_color;
     text-align: center;
+    z-index: 1;
     &:hover {
         cursor: pointer;
         background: $lighter_purple;
@@ -350,9 +357,11 @@ body {
     margin: 0 1.5% 2%;
     padding: 0.5% 0.5% 1.5% 1.5%;
     max-width: 45%;
+    height: fit-content;
     border-radius: 5px;
     background: $greyish_color;
     a {
+        max-width: 45%;
         text-decoration: none;
         color: $light_purple;
     }
