--- a/public/style.css
+++ b/public/style.css
@@ -149,9 +149,9 @@ body {
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
+  min-width: -webkit-fit-content;
+  min-width: -moz-fit-content;
+  min-width: fit-content;
   z-index: 1;
   background: #282828;
   border-radius: 2px;
@@ -524,19 +524,24 @@ body {
     position: relative;
     z-index: 0;
     margin-left: 4%;
-    font-size: 1.2em;
+    font-size: 1.3em;
     color: #5D88FA;
   }
   .nav__title {
     margin-left: 4%;
-    font-size: 1.2em;
+    font-size: 1.3em;
   }
   .nav__account-icon {
     -webkit-transform: scale(0.8);
             transform: scale(0.8);
   }
+  .options-modal {
+    position: absolute;
+    right: 4%;
+    padding: 7px;
+  }
   .options-modal__btn {
-    font-size: 0.9em;
+    font-size: 1.1em;
   }
   .left-panel {
     position: absolute;
@@ -594,8 +599,8 @@ body {
   .topic-content__add-button {
     right: 7%;
     bottom: 3%;
-    width: 11vw;
-    height: 11vw;
+    width: 12vw;
+    height: 12vw;
     padding: 5px 0;
   }
   .topic-content__add-button__icon {
