--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,7 @@
 .options-modal__btn:focus, .group-section__select-button:focus, .input-field__input:focus, .input-field__add-button:focus, .topic-content__add-button:focus {
   outline-style: solid;
   outline-width: 2px;
-  outline-color: #5d55fa;
+  outline-color: #5D88FA;
 }
 
 .login-signup-form, .password-modal, .link-modal {
@@ -47,14 +47,14 @@
   padding: 2%;
   border: none;
   border-radius: 5px;
-  background: #5d55fa;
+  background: #5D88FA;
   color: #E0E0E0;
   font-size: 1.1em;
 }
 
 .login-signup-form__btn:hover, .password-modal__submit-btn:hover, .link-modal__submit-btn:hover {
   cursor: pointer;
-  background: #5D88FA;
+  background: #5d55fa;
 }
 
 * {
@@ -237,7 +237,7 @@ body {
 
 .group-section__select-button:hover {
   cursor: pointer;
-  background: #5d55fa;
+  background: #5D88FA;
   color: #E0E0E0;
 }
 
@@ -259,7 +259,7 @@ body {
 }
 
 .highlight {
-  background: #5d55fa;
+  background: #5D88FA;
   color: #E0E0E0;
 }
 
@@ -296,7 +296,7 @@ body {
   border: none;
   background: transparent;
   text-align: center;
-  color: #5d55fa;
+  color: #5D88FA;
   z-index: 3;
 }
 
@@ -347,14 +347,14 @@ body {
   padding: 5px 0;
   border: none;
   border-radius: 50%;
-  background: #5d55fa;
+  background: #5D88FA;
   color: #E0E0E0;
   text-align: center;
 }
 
 .topic-content__add-button:hover {
   cursor: pointer;
-  background: #5D88FA;
+  background: #5d55fa;
 }
 
 .topic-content__add-button__icon {
@@ -376,7 +376,7 @@ body {
 .topic-content__link a {
   max-width: 45%;
   text-decoration: none;
-  color: #5d55fa;
+  color: #5D88FA;
 }
 
 .topic-content__link:hover {
@@ -538,10 +538,10 @@ body {
   .options-modal {
     position: absolute;
     right: 4%;
-    padding: 7px;
+    padding: 5px;
   }
   .options-modal__btn {
-    font-size: 1.1em;
+    font-size: 1.2em;
   }
   .left-panel {
     position: absolute;
@@ -582,7 +582,7 @@ body {
     color: #121212;
   }
   .topic-content__input {
-    padding: 1.5%;
+    padding: 2%;
   }
   .topic-content__add-button {
     padding: 1.5% 0;
