--- a/public/style.scss
+++ b/public/style.scss
@@ -15,7 +15,7 @@ $dark-red: rgba(255, 0, 0, 0.8);
 %outline-style {
     outline-style: solid;
     outline-width: 2px;
-    outline-color: $light_purple;
+    outline-color: $lighter_purple;
 }
 
 %centered-form-layout {
@@ -49,12 +49,12 @@ $dark-red: rgba(255, 0, 0, 0.8);
     padding: 2%;
     border: none;
     border-radius: 5px;
-    background: $light_purple;
+    background: $lighter_purple;
     color: $white_greyish_color;
     font-size: 1.1em;
     &:hover {
         cursor: pointer;
-        background: $lighter_purple;
+        background: $light_purple;
     }
 }
 
@@ -226,7 +226,7 @@ body {
     font-size: 1.2em;
     &:hover {
         cursor: pointer;
-        background: $light_purple;
+        background: $lighter_purple;
         color: $white_greyish_color;
         .group-section__select-button__icon {
             visibility: visible;
@@ -249,7 +249,7 @@ body {
 }
 
 .highlight {
-    background: $light_purple;
+    background: $lighter_purple;
     color: $white_greyish_color;
 }
 
@@ -285,7 +285,7 @@ body {
     border: none;
     background: transparent;
     text-align: center;
-    color: $light_purple;
+    color: $lighter_purple;
     z-index: 3;
     &:hover {
         cursor: pointer;
@@ -336,12 +336,12 @@ body {
     padding: 5px 0;
     border: none;
     border-radius: 50%;
-    background: $light_purple;
+    background: $lighter_purple;
     color: $white_greyish_color;
     text-align: center;
     &:hover {
         cursor: pointer;
-        background: $lighter_purple;
+        background: $light_purple;
     }
     &:focus {
         @extend %outline-style;
@@ -363,7 +363,7 @@ body {
     a {
         max-width: 45%;
         text-decoration: none;
-        color: $light_purple;
+        color: $lighter_purple;
     }
     &:hover {
         background: $grey_color;
