--- a/public/_mobile_style.scss
+++ b/public/_mobile_style.scss
@@ -16,9 +16,9 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        padding: 3% 0;
+        padding: 3% 0 2%;
         height: fit-content;
-        width: 80%;
+        width: 90%;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -64,7 +64,7 @@
 
     .login-signup-form__label, .login-signup-form__input, 
     .login-signup-form__btn {
-        margin-left: 12.5%;
+        margin-left: 10%;
     }
 
     .login-signup-form__label {
@@ -74,18 +74,18 @@
 
     .login-signup-form__input {
         @extend %input-style-mobile;
-        width: 75%;
+        width: 80%;
     }
 
     .login-signup-form__btn {
         @extend %submit-btn-mobile;
-        width: 75%;
+        width: 80%;
     }
 
     .login-signup-form__text {
         margin: 10% auto 5%;
         width: fit-content;
-        max-width: 75%;
+        max-width: 80%;
         font-size: 0.9em;
     }
 
