--- a/public/_mobile_style.scss
+++ b/public/_mobile_style.scss
@@ -134,7 +134,7 @@
         left: 50%;
         transform: translate(-50%, -50%);
         padding: 1% 0;
-        height: 88vh;
+        height: 85vh;
         width: 95vw;
         display: flex;
         flex-direction: column;
@@ -142,6 +142,7 @@
         align-items: flex-start;
         border-radius: 7px;
         z-index: 1;
+        border: solid 1px red;
     }
 
     .group-section__select-button {
@@ -175,9 +176,10 @@
     // Mainpage right panel --------------------------------------------------------------------
     .topic-content {
         width: 97vw;
-        height: 88vh;
+        height: 85vh;
         padding: 1%;
         font-size: 0.9em;
+        border: solid 1px green;
     }
 
     .topic-content__add-button {
