--- a/public/style.css
+++ b/public/style.css
@@ -545,12 +545,12 @@ body {
   }
   .left-panel {
     position: absolute;
-    top: 53%;
+    top: 50%;
     left: 50%;
     -webkit-transform: translate(-50%, -50%);
             transform: translate(-50%, -50%);
     padding: 1% 0;
-    height: 85vh;
+    height: 80vh;
     width: 95vw;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -567,7 +567,6 @@ body {
             align-items: flex-start;
     border-radius: 7px;
     z-index: 1;
-    border: solid 1px red;
   }
   .group-section__select-button {
     padding: 3% 0 3% 8%;
@@ -593,10 +592,10 @@ body {
   }
   .topic-content {
     width: 97vw;
-    height: 88vh;
+    height: 85vh;
     padding: 1%;
     font-size: 0.9em;
-    border: solid 1px red;
+    border: solid 1px green;
   }
   .topic-content__add-button {
     right: 7%;
