--- a/public/_mobile_style.scss
+++ b/public/_mobile_style.scss
@@ -130,11 +130,11 @@
     // Mainpage left panel --------------------------------------------------------------------
     .left-panel {
         position: absolute;
-        top: 50%;
+        top: 53%;
         left: 50%;
         transform: translate(-50%, -50%);
         padding: 1% 0;
-        height: 80vh;
+        height: 77vh;
         width: 95vw;
         display: flex;
         flex-direction: column;
@@ -159,26 +159,18 @@
         color: $dark_grey_1;
     }
 
-    .topic-content__input {
+    .input-field__input {
         padding: 2%;
-    }
-
-    .topic-content__add-button {
-        padding: 1.5% 0;
-    }
-
-    .topic-content__add-button__icon {
-        font-size: 1.3rem;
+        font-size: 1.1rem;
     }
 
 
     // Mainpage right panel --------------------------------------------------------------------
     .topic-content {
         width: 97vw;
-        height: 80vh;
+        height: 78vh;
         padding: 1%;
         font-size: 0.9em;
-        border: solid 1px green;
     }
 
     .topic-content__add-button {
