--- a/public/style.css
+++ b/public/style.css
@@ -70,6 +70,16 @@ body {
   overflow: hidden;
 }
 
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 10;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
 .login-signup-form {
   background: #282828;
 }
@@ -405,8 +415,6 @@ body {
   width: 35%;
   background: #282828;
   z-index: 2;
-  -webkit-box-shadow: 0 3px 10px 5px #3A3A3C;
-          box-shadow: 0 3px 10px 5px #3A3A3C;
 }
 
 .password-modal__close-btn, .link-modal__close-btn {
